plugins {
	id 'java'
	id 'org.springframework.boot' version '3.4.5'
	id 'io.spring.dependency-management' version '1.1.7'
}

group = 'com.kvote'
version = '0.0.1-SNAPSHOT'

java {
	toolchain {
		languageVersion = JavaLanguageVersion.of(21)
	}
}

repositories {
	google()
	mavenCentral()
}

dependencies {
	// Spring Web
	implementation 'org.springframework.boot:spring-boot-starter-web'

	// Spring Security
	implementation 'org.springframework.boot:spring-boot-starter-security'

	// Spring Data JPA
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'

	// JWT (JJWT)
	implementation 'io.jsonwebtoken:jjwt-api:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.11.5'
	runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.11.5'

	// Redis
	//implementation 'org.springframework.boot:spring-boot-starter-data-redis'

	// Klaytn Caver Java SDK
	//implementation 'com.klaytn.caver:core:1.7.4' // 또는 최신 버전 확인 후 변경 가능

	// MySQL or H2 or PostgreSQL 선택
	runtimeOnly 'com.mysql:mysql-connector-j' // 실제 배포용 DB
	// runtimeOnly 'com.h2database:h2' // 테스트용 DB

	// Lombok
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// 테스트
	testImplementation 'org.springframework.boot:spring-boot-starter-test'

	//스웨거
	implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.7.0'
    //Webflux
//    implementation 'org.springframework.boot:spring-boot-starter-webflux'

    implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'

    //인가용
    //implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'

    //env
    implementation 'me.paulschwarz:spring-dotenv:4.0.0'

	// web3j for Ethereum/Kairos
	implementation 'org.web3j:core:4.9.4'

	//이메일 인증용
	implementation 'org.springframework.boot:spring-boot-starter-mail'

	//fcm
	implementation 'com.google.firebase:firebase-admin:9.2.0'
}

tasks.named('test') {
	useJUnitPlatform()
}
